DispatchFlow/force-app/main/default/objects/Work_Order__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <label>Assigned Technician</label>
    <type>Lookup</type>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>