DispatchFlow/force-app/main/default/objects/Work_Order__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Score of the winning technician (0-100), set by the matching engine.</description>
</CustomField>