DispatchFlow/force-app/main/default/objects/Work_Order__c/fields/Required_Skill__c.field-meta.xml
<CustomField>
    <fullName>Required_Skill__c</fullName>
    <label>Required Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HVAC</fullName><default>false</default><label>HVAC</label></value>
            <value><fullName>Electrical</fullName><default>false</default><label>Electrical</label></value>
            <value><fullName>Plumbing</fullName><default>false</default><label>Plumbing</label></value>
            <value><fullName>Networking</fullName><default>false</default><label>Networking</label></value>
            <value><fullName>General</fullName><default>true</default><label>General</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>