DispatchFlow/force-app/main/default/objects/Work_Order__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>North</fullName><default>false</default><label>North</label></value>
            <value><fullName>South</fullName><default>false</default><label>South</label></value>
            <value><fullName>East</fullName><default>false</default><label>East</label></value>
            <value><fullName>West</fullName><default>false</default><label>West</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>